--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -12,6 +12,9 @@ Only configuration created via cookiecutter or very likely to be edited
 by installer are included here.
 """
 
+from invenio_rdm_records.permissions import RDMRecordPermissionPolicy
+from invenio_records_permissions.generators import Disable
+
 # Flask
 # =====
 # See https://flask.palletsprojects.com/en/1.1.x/config/
@@ -104,3 +107,14 @@ INSTANCE_THEME_FILE = './scss/demo-inveniordm/theme.scss'
 
 # Instance's search theme entrypoint file. Path under `assets` folder.
 INSTANCE_SEARCH_THEME_FILE = './scss/demo-inveniordm/search/theme.scss'
+
+# Invenio-Records-Permissions
+# ============================
+
+class RDMDemoRecordPermissionPolicy(RDMRecordPermissionPolicy):
+    can_create = [Disable()]  # Nobody can create records
+    can_update = [Disable()]
+    can_delete = [Disable()]
+    can_update_files = [Disable()]
+
+RECORDS_PERMISSIONS_RECORD_POLICY = RDMDemoRecordPermissionPolicy
