theme: remove invenio logo, use invenio-rdm one

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -95,7 +95,7 @@ BABEL_DEFAULT_TIMEZONE = 'Europe/Zurich'
 # Frontpage title
 THEME_FRONTPAGE_TITLE = "InvenioRDM Demo Site"
 # Header logo
-THEME_LOGO="images/logo.svg"
+THEME_LOGO="images/invenio-rdm.png"
 
 
 # Invenio-App-RDM
