--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -93,7 +93,9 @@ BABEL_DEFAULT_TIMEZONE = 'Europe/Zurich'
 # See https://invenio-theme.readthedocs.io/en/latest/configuration.html
 
 # Frontpage title
-THEME_FRONTPAGE_TITLE = "InvenioRDM Demo Site"
+THEME_FRONTPAGE_TITLE = "Welcome to InvenioRDM's Sandbox!"
+# Frontpage template
+THEME_FRONTPAGE_TEMPLATE = 'demo_inveniordm/demo_frontpage.html'
 # Header logo
 THEME_LOGO="images/invenio-rdm.png"
 
