ui: semantic-ui migration
Co-authored-by: ppanero <pablo.panero@cern.ch>

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -104,10 +104,7 @@ THEME_LOGO="images/invenio-rdm.png"
 # See https://invenio-app-rdm.readthedocs.io/en/latest/configuration.html
 
 # Instance's theme entrypoint file. Path relative to the ``assets/`` folder.
-INSTANCE_THEME_FILE = './scss/demo-inveniordm/theme.scss'
-
-# Instance's search theme entrypoint file. Path under `assets` folder.
-INSTANCE_SEARCH_THEME_FILE = './scss/demo-inveniordm/search/theme.scss'
+INSTANCE_THEME_FILE = './less/theme.less'
 
 # Invenio-Records-Permissions
 # ============================
