--- a/demo-inveniordm/Pipfile
+++ b/demo-inveniordm/Pipfile
@@ -7,14 +7,15 @@ verify_ssl = true
 check-manifest = ">=0.25"
 
 [packages]
-invenio-app-rdm = {extras = ["postgresql", "elasticsearch7"],version = "~=0.7.0"}
-invenio-rdm-records = "~=0.10.0"
-invenio-records-permissions = "~=0.7.0"
+invenio-app-rdm = {extras = ["postgresql", "elasticsearch7"],version = "~=0.9.3"}
+invenio-rdm-records = "~=0.13.1"
 uwsgi = ">=2.0"
 uwsgitop = ">=0.11"
 uwsgi-tools = ">=1.1.1"
-lxml = "<4.2.6,>=3.5.0"
 marshmallow = ">=3.3.0,<4.0.0"
 
 [requires]
 python_version = "3.6"
+
+[pipenv]
+allow_prereleases = true
