theme: use invenio buttons

--- a/demo-inveniordm/assets/less/theme.config
+++ b/demo-inveniordm/assets/less/theme.config
@@ -30,7 +30,7 @@
 @reset       : 'default';
 
 /* Elements */
-@button      : 'default';
+@button      : 'invenio';
 @container   : 'invenio';
 @divider     : 'default';
 @flag        : 'default';
