config: use svg logo

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -96,7 +96,7 @@ THEME_FRONTPAGE_TITLE = "Welcome to InvenioRDM's Sandbox!"
 # Frontpage template
 THEME_FRONTPAGE_TEMPLATE = 'demo_inveniordm/demo_frontpage.html'
 # Header logo
-THEME_LOGO="images/invenio-rdm.png"
+THEME_LOGO="images/invenio-rdm.svg"
 
 
 # Invenio-App-RDM
