theme: fix site folder path

--- a/demo-inveniordm/assets/less/theme.config
+++ b/demo-inveniordm/assets/less/theme.config
@@ -89,7 +89,7 @@
 @themesFolder : 'themes';
 
 /* Path to site override folder */
-@siteFolder  : '../../less/demo-inveniordm/site';
+@siteFolder  : '../../less/demo-inveniordm/';
 
 
 /*******************************
