--- a/demo-inveniordm/assets/less/theme.config
+++ b/demo-inveniordm/assets/less/theme.config
@@ -34,7 +34,7 @@
 @container   : 'invenio';
 @divider     : 'default';
 @flag        : 'default';
-@header      : 'default';
+@header      : 'invenio';
 @icon        : 'default';
 @image       : 'default';
 @input       : 'invenio';
@@ -44,7 +44,7 @@
 @placeholder : 'default';
 @rail        : 'default';
 @reveal      : 'default';
-@segment     : 'default';
+@segment     : 'invenio';
 @step        : 'default';
 
 /* Collections */
@@ -52,7 +52,7 @@
 @form        : 'default';
 @grid        : 'default';
 @menu        : 'invenio';
-@message     : 'default';
+@message     : 'invenio';
 @table       : 'default';
 
 /* Modules */
