dependencies: update to alpha 14 release

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -101,3 +101,6 @@ THEME_LOGO="images/invenio-rdm.svg"
 
 # Instance's theme entrypoint file. Path relative to the ``assets/`` folder.
 INSTANCE_THEME_FILE = './less/theme.less'
+
+# For invenio-vocabularies
+JSONSCHEMAS_HOST = "localhost"
