global: fixes in wipe_recreate.sh script
* Sets admin's user password

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -104,3 +104,8 @@ INSTANCE_THEME_FILE = './less/theme.less'
 
 # For invenio-vocabularies
 JSONSCHEMAS_HOST = "localhost"
+
+# admin user password
+RDM_RECORDS_USER_FIXTURE_PASSWORDS = {
+    'admin@inveniosoftware.org': '123456'
+}
