--- a/demo-inveniordm/docker/nginx/conf.d/default.conf
+++ b/demo-inveniordm/docker/nginx/conf.d/default.conf
@@ -24,15 +24,14 @@ server {
 
 # HTTPS server
 server {
-  listen 443; # IPv4
-  listen [::]:443; # IPv6
+  listen 443 ssl; # IPv4
+  listen [::]:443 ssl; # IPv6
   server_name _;
   charset utf-8;
   keepalive_timeout 5;
 
   # SSL configuration according to best practices from
   # https://mozilla.github.io/server-side-tls/ssl-config-generator/
-  ssl on;
   # The provided certificate (test.crt) and private key (test.key) is only for
   # testing and must never be used in production environment.
   ssl_certificate /etc/ssl/certs/test.crt;
@@ -60,9 +59,7 @@ server {
   proxy_http_version 1.1;
 
   # Proxying to the application server
-  # Two locations are defined in order to allow large file uploads in the files
-  # API without exposing the other parts of the application to receive huge
-  # request bodies.
+  ## UI server
   location / {
     uwsgi_pass ui_server;
     include uwsgi_params;
@@ -80,6 +77,7 @@ server {
     # Max upload size (except for files) is set to 100mb as default.
     client_max_body_size 100m;
   }
+  ## Most API
   location /api {
     uwsgi_pass api_server;
     include uwsgi_params;
@@ -97,7 +95,11 @@ server {
     # Max upload size (except for files) is set to 100mb as default.
     client_max_body_size 100m;
   }
-  location /api/files {
+  ## API files
+  # Another location is defined in order to allow large file uploads in the files
+  # API without exposing the other parts of the application to receive huge
+  # request bodies.
+  location ~ /api/records/.+/draft/files/.+/content {
     gzip off;
     uwsgi_pass api_server;
     include uwsgi_params;
@@ -115,7 +117,6 @@ server {
     # Max upload size for files is set to 50GB (configure as needed).
     client_max_body_size 50G;
   }
-
   # Static content is served directly by nginx and not the application server.
   location /static {
     alias /opt/invenio/var/instance/static;
