--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -109,3 +109,28 @@ JSONSCHEMAS_HOST = "localhost"
 RDM_RECORDS_USER_FIXTURE_PASSWORDS = {
     'admin@inveniosoftware.org': '123456'
 }
+
+# Invenio-Records-Resources
+# =========================
+# See https://github.com/inveniosoftware/invenio-records-resources/blob/master/invenio_records_resources/config.py
+
+# TODO: Set with your own hostname when deploying to production
+SITE_HOSTNAME = "127.0.0.1"
+
+SITE_UI_URL = f"https://{SITE_HOSTNAME}:5000"
+
+SITE_API_URL = f"https://{SITE_HOSTNAME}:5000/api"
+
+
+# Invenio-RDM-Records
+# ===================
+# See https://github.com/inveniosoftware/invenio-rdm-records/blob/master/invenio_rdm_records/config.py
+RDM_RECORDS_DOI_DATACITE_ENABLED = True
+RDM_RECORDS_DOI_DATACITE_USERNAME = ""
+RDM_RECORDS_DOI_DATACITE_PASSWORD = ""
+RDM_RECORDS_DOI_DATACITE_PREFIX = ""
+RDM_RECORDS_DOI_DATACITE_TEST_MODE = True
+
+# Invenio-Communities
+# ===================
+COMMUNITIES_ENABLED = True
