auth: add CERN keycloak and ORCID sandbox

--- a/demo-inveniordm/Pipfile
+++ b/demo-inveniordm/Pipfile
@@ -7,8 +7,8 @@ verify_ssl = true
 check-manifest = ">=0.25"
 
 [packages]
-invenio = "~=3.4.0"
-invenio-app-rdm = {extras = ["postgresql", "elasticsearch7"], version = "~=3.0.0"}
+invenio = "~=3.5.0a2"
+invenio-app-rdm = {extras = ["postgresql", "elasticsearch7"], version = "~=4.0.0.dev3"}
 uwsgi = ">=2.0"
 uwsgitop = ">=0.11"
 uwsgi-tools = ">=1.1.1"
