--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -12,6 +12,10 @@ Only configuration created via cookiecutter or very likely to be edited
 by installer are included here.
 """
 
+import os
+from invenio_oauthclient.contrib.keycloak import KeycloakSettingsHelper
+from invenio_oauthclient.contrib.orcid import ORCIDOAuthSettingsHelper
+
 # Flask
 # =====
 # See https://flask.palletsprojects.com/en/1.1.x/config/
@@ -134,3 +138,40 @@ RDM_RECORDS_DOI_DATACITE_TEST_MODE = True
 # Invenio-Communities
 # ===================
 COMMUNITIES_ENABLED = True
+
+# Invenio-OAuthclient
+# ===================
+_keycloak_helper = KeycloakSettingsHelper(
+    title="CERN",
+    description="CERN SSO authentication",
+    base_url="https://auth.cern.ch/auth/",
+    realm="cern",
+    app_key="CERN_APP_CREDENTIALS"
+)
+OAUTHCLIENT_CERN_REALM_URL = _keycloak_helper.realm_url
+OAUTHCLIENT_CERN_USER_INFO_URL = _keycloak_helper.user_info_url
+OAUTHCLIENT_CERN_VERIFY_EXP = True
+OAUTHCLIENT_CERN_VERIFY_AUD = False
+
+_orcid_sandbox_app = ORCIDOAuthSettingsHelper(
+    title="ORCID (Sandbox)",
+    description="ORCID (Sandbox) - Connecting Research and Researchers.",
+    base_url='https://pub.sandbox.orcid.org/',
+    access_token_url='https://sandbox.orcid.org/oauth/token',
+    authorize_url='https://sandbox.orcid.org/oauth/authorize#show_login',
+)
+
+OAUTHCLIENT_REMOTE_APPS = {
+    "cern": _keycloak_helper.remote_app,
+    "orcid": _orcid_sandbox_app.remote_app,
+}
+
+# secrets will be injected on deployment
+CERN_APP_CREDENTIALS = {
+    "consumer_key": "CHANGE ME",
+    "consumer_secret": "CHANGE ME",
+}
+ORCID_APP_CREDENTIALS = {
+    "consumer_key": "CHANGE ME",
+    "consumer_secret": "CHANGE ME",
+}
