auth: fix CERN login

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -144,7 +144,7 @@ COMMUNITIES_ENABLED = True
 _keycloak_helper = KeycloakSettingsHelper(
     title="CERN",
     description="CERN SSO authentication",
-    base_url="https://auth.cern.ch/auth/",
+    base_url="https://auth.cern.ch/",
     realm="cern",
     app_key="CERN_APP_CREDENTIALS"
 )
