--- a/demo-inveniordm/Pipfile
+++ b/demo-inveniordm/Pipfile
@@ -7,8 +7,7 @@ verify_ssl = true
 check-manifest = ">=0.25"
 
 [packages]
-invenio = "~=3.5.0a2"
-invenio-app-rdm = {extras = ["postgresql", "elasticsearch7"], version = "~=4.0.0.dev3"}
+invenio-app-rdm = {extras = ["postgresql", "elasticsearch7"], version = "~=4.0.0"}
 uwsgi = ">=2.0"
 uwsgitop = ">=0.11"
 uwsgi-tools = ">=1.1.1"
