--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -129,7 +129,7 @@ SITE_API_URL = f"https://{SITE_HOSTNAME}:5000/api"
 # Invenio-RDM-Records
 # ===================
 # See https://github.com/inveniosoftware/invenio-rdm-records/blob/master/invenio_rdm_records/config.py
-RDM_RECORDS_DOI_DATACITE_ENABLED = False
+RDM_RECORDS_DOI_DATACITE_ENABLED = True
 RDM_RECORDS_DOI_DATACITE_USERNAME = ""
 RDM_RECORDS_DOI_DATACITE_PASSWORD = ""
 RDM_RECORDS_DOI_DATACITE_PREFIX = ""
