config: remove deprecated SITE_HOSTNAME

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -118,12 +118,9 @@ RDM_RECORDS_USER_FIXTURE_PASSWORDS = {
 # =========================
 # See https://github.com/inveniosoftware/invenio-records-resources/blob/master/invenio_records_resources/config.py
 
-# TODO: Set with your own hostname when deploying to production
-SITE_HOSTNAME = "127.0.0.1"
+SITE_UI_URL = "https://127.0.0.1:5000"
 
-SITE_UI_URL = f"https://{SITE_HOSTNAME}:5000"
-
-SITE_API_URL = f"https://{SITE_HOSTNAME}:5000/api"
+SITE_API_URL = "https://127.0.0.1:5000/api"
 
 
 # Invenio-RDM-Records
