--- a/demo-inveniordm/Pipfile
+++ b/demo-inveniordm/Pipfile
@@ -8,8 +8,7 @@ check-manifest = ">=0.25"
 
 [packages]
 invenio-app-rdm = {extras = ["postgresql", "elasticsearch7"], version = "~=6.0.0"}
-invenio-logging = {extras = ["sentry"], version = "~=1.3.0"}
-celery = ">=5.0.0,<5.2.0"
+invenio-logging = {extras = ["sentry-sdk"], version = "~=1.3.0"}
 uwsgi = ">=2.0"
 uwsgitop = ">=0.11"
 uwsgi-tools = ">=1.1.1"
