global: upgrade to v7

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -126,11 +126,11 @@ SITE_API_URL = "https://127.0.0.1:5000/api"
 # Invenio-RDM-Records
 # ===================
 # See https://github.com/inveniosoftware/invenio-rdm-records/blob/master/invenio_rdm_records/config.py
-RDM_RECORDS_DOI_DATACITE_ENABLED = True
-RDM_RECORDS_DOI_DATACITE_USERNAME = ""
-RDM_RECORDS_DOI_DATACITE_PASSWORD = ""
-RDM_RECORDS_DOI_DATACITE_PREFIX = ""
-RDM_RECORDS_DOI_DATACITE_TEST_MODE = True
+DATACITE_ENABLED = True
+DATACITE_USERNAME = ""
+DATACITE_PASSWORD = ""
+DATACITE_PREFIX = ""
+DATACITE_TEST_MODE = True
 
 # Invenio-Communities
 # ===================
@@ -172,3 +172,6 @@ ORCID_APP_CREDENTIALS = {
     "consumer_key": "CHANGE ME",
     "consumer_secret": "CHANGE ME",
 }
+
+
+OAISERVER_ID_PREFIX = "inveniordm.web.cern.ch"
