--- a/demo-inveniordm/Pipfile
+++ b/demo-inveniordm/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 check-manifest = ">=0.25"
 
 [packages]
-invenio-app-rdm = {extras = ["postgresql", "elasticsearch7"], version = "~=6.0.0"}
+invenio-app-rdm = {version = "~=7.0.1", extras = ["elasticsearch7", "postgresql"]}
 invenio-logging = {extras = ["sentry-sdk"], version = "~=1.3.0"}
 uwsgi = ">=2.0"
 uwsgitop = ">=0.11"
