--- a/demo-inveniordm/Pipfile
+++ b/demo-inveniordm/Pipfile
@@ -7,14 +7,15 @@ verify_ssl = true
 check-manifest = ">=0.25"
 
 [packages]
-invenio-app-rdm = {version = "~=7.0.1", extras = ["elasticsearch7", "postgresql"]}
+invenio-app-rdm = {extras = ["postgresql", "elasticsearch7"], version = "~=8.0.0"}
 invenio-logging = {extras = ["sentry-sdk"], version = "~=1.3.0"}
+ipython = "!=8.1.0"
 uwsgi = ">=2.0"
 uwsgitop = ">=0.11"
 uwsgi-tools = ">=1.1.1"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
 
 [pipenv]
 allow_prereleases = true
