config: disable communities

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -134,7 +134,7 @@ DATACITE_TEST_MODE = True
 
 # Invenio-Communities
 # ===================
-COMMUNITIES_ENABLED = True
+COMMUNITIES_ENABLED = False
 
 # Invenio-OAuthclient
 # ===================
