global: fix rdm theme

--- a/demo-inveniordm/assets/less/theme.config
+++ b/demo-inveniordm/assets/less/theme.config
@@ -86,7 +86,7 @@
 *******************************/
 
 /* Path to theme packages */
-@themesFolder : 'themes';
+@themesFolder : '~semantic-ui-less/themes';
 
 /* Path to site override folder */
 @siteFolder  : '../../less/demo-inveniordm';
@@ -96,7 +96,7 @@
          Import Theme
 *******************************/
 
-@import (multiple) "~semantic-ui-less/theme.less";
+@import (multiple) "themes/rdm/theme.less";
 
 @fontPath : "../../../themes/@{theme}/assets/fonts";
 
