--- a/demo-inveniordm/Pipfile
+++ b/demo-inveniordm/Pipfile
@@ -7,9 +7,8 @@ verify_ssl = true
 check-manifest = ">=0.25"
 
 [packages]
-invenio-app-rdm = {extras = ["postgresql", "elasticsearch7"], version = "~=8.0.0"}
+invenio-app-rdm = {extras = ["postgresql", "elasticsearch7"], version = "~=9.0.0.dev22"}
 invenio-logging = {extras = ["sentry-sdk"], version = "~=1.3.0"}
-ipython = "!=8.1.0"
 uwsgi = ">=2.0"
 uwsgitop = ">=0.11"
 uwsgi-tools = ">=1.1.1"
