--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -171,3 +171,155 @@ ORCID_APP_CREDENTIALS = {
 
 
 OAISERVER_ID_PREFIX = "inveniordm.web.cern.ch"
+
+
+# Custom Fields
+# =============
+
+from flask_babelex import lazy_gettext as _
+from invenio_records_resources.services.custom_fields import (
+    BaseCF,
+    EDTFDateStringCF,
+    ISODateStringCF,
+    KeywordCF,
+    TextCF,
+)
+from invenio_records_resources.services.records.facets import CFTermsFacet
+from invenio_rdm_records.config import RDM_FACETS, RDM_SEARCH
+from invenio_rdm_records.services.schemas.metadata import _valid_url
+from invenio_vocabularies.services.custom_fields import VocabularyCF
+
+#
+# Namespaces
+#
+
+RDM_NAMESPACES = {
+    "rdm": "https://inveniordm.docs.cern.ch"
+}
+
+#
+# Records custom fields
+#
+
+RDM_CUSTOM_FIELDS = [
+    TextCF(
+        name="rdm:repository_url",
+        field_args={"validate": _valid_url(_("Not a valid URL."))},
+    ),
+    VocabularyCF(
+        name="rdm:development_status",
+        vocabulary_id="developmentstatus",
+        dump_options=True,
+        multiple=False,
+    ),
+    VocabularyCF(
+        name="rdm:programming_languages",
+        vocabulary_id="programminglanguages",
+        dump_options=True,
+        multiple=True
+    ),
+    EDTFDateStringCF(name="rdm:release_year"),
+    ISODateStringCF(name="rdm:release_date"),
+    TextCF(name="rdm:release_notes"),
+]
+
+RDM_CUSTOM_FIELDS_UI = [
+    {
+        "section": _("Software"),
+        "fields": [
+            dict(
+                field="rdm:repository_url",
+                ui_widget="Input",
+                props=dict(
+                    label="Repository URL",
+                    placeholder="https://your.repository.url",
+                    icon="linkify",
+                    description="URL of the repository where the software is hosted.",
+                )
+            ),
+            dict(
+                field="rdm:development_status",
+                ui_widget="Dropdown",  # predefined widget
+                props=dict(
+                    label="Development Status",
+                    placeholder="Concept, WIP, Active...",
+                    icon="group",
+                    description="Find more at repostatus.org",
+                    search=False,
+                    multiple=False,
+                    clearable=True
+                )
+            ),
+            dict(
+                field="rdm:programming_languages",
+                ui_widget="AutocompleteDropdown",  # predefined widget
+                props=dict(
+                    label="Programming Languages",
+                    placeholder="Type an author name...",
+                    icon="language",
+                    description="List of programming fields used in this project.",
+                    autocompleteFrom="/api/vocabularies/programminglanguages",
+                    clearable=True,
+                    multiple=True,
+                )
+            ),
+            dict(
+                field="rdm:release_year",
+                ui_widget="Input",
+                props=dict(
+                    label="Release Year",
+                    placeholder="Release year (EDTF date of format YYYY).",
+                    icon="calendar",
+                    description="Format: DATE or DATE/DATE where DATE is YYYY or YYYY-MM or YYYY-MM-DD.",
+                )
+            ),
+            dict(
+                field="rdm:release_date",
+                ui_widget="Input",
+                props=dict(
+                    label="Release Date",
+                    placeholder="Release date in ISO format (YYYY-MM-DD).",
+                    icon="calendar",
+                    description="Format: YYYY-MM-DD.",
+                )
+            ),
+            dict(
+                field="rdm:release_notes",
+                ui_widget="RichInput",
+                props=dict(
+                    label="Release Notes",
+                    placeholder="Added new feature X...",
+                    icon="book",
+                    description="Changes made in the release.",
+                )
+            ),
+        ]
+    }
+]
+
+RDM_FACETS = {
+    **RDM_FACETS,
+    "development_status": {
+        "facet": CFTermsFacet(
+            field="rdm:development_status.id",
+            label=_("Development Status"),
+        ),
+        "ui": {
+            "field": CFTermsFacet.field("rdm:development_status.id"),
+        },
+    },
+    "programming_language": {
+        "facet": CFTermsFacet(
+            field="rdm:programming_languages.id",
+            label=_("Development Status"),
+        ),
+        "ui": {
+            "field": CFTermsFacet.field("rdm:programming_languages.id"),
+        },
+    },
+}
+
+RDM_SEARCH = {
+    **RDM_SEARCH,
+    "facets": RDM_SEARCH["facets"] + ["programming_language", "development_status"]
+}
