--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -323,3 +323,47 @@ RDM_SEARCH = {
     **RDM_SEARCH,
     "facets": RDM_SEARCH["facets"] + ["programming_language", "development_status"]
 }
+
+
+#
+# Communities custom fields
+#
+
+COMMUNITIES_NAMESPACES = RDM_NAMESPACES
+
+COMMUNITIES_CUSTOM_FIELDS = [
+    TextCF(
+        name="rdm:external_url",
+        field_args={"validate": _valid_url(_("Not a valid URL."))},
+    ),
+    TextCF(name="rdm:policy"),
+]
+
+
+COMMUNITIES_CUSTOM_FIELDS_UI = [
+    {
+        "section": _("Other details"),
+        "fields": [
+            dict(
+                field="rdm:external_url",
+                ui_widget="Input",
+                props=dict(
+                    label="External URL",
+                    placeholder="https://your.community.url",
+                    icon="linkify",
+                    description="External URL of the community...",
+                )
+            ),
+            dict(
+                field="rdm:policy",
+                ui_widget="RichInput",
+                props=dict(
+                    label="Policy",
+                    placeholder="For a record to be accepted into this community it must...",
+                    icon="pencil",
+                    description="Conditions to be accepted into the community",
+                )
+            ),
+        ]
+    }
+]
