config: add search prefix

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -172,6 +172,12 @@ ORCID_APP_CREDENTIALS = {
 
 OAISERVER_ID_PREFIX = "inveniordm.web.cern.ch"
 
+#
+# Invenio-Search
+#
+
+SEARCH_INDEX_PREFIX = "demo-inveniordm-"
+
 
 # Custom Fields
 # =============
@@ -361,7 +367,7 @@ COMMUNITIES_CUSTOM_FIELDS_UI = [
                     label="Policy",
                     placeholder="For a record to be accepted into this community it must...",
                     icon="pencil",
-                    description="Conditions to be accepted into the community",
+                    description="Conditions for a record to be accepted into the community",
                 )
             ),
         ]
