--- a/demo-inveniordm/docker-services.yml
+++ b/demo-inveniordm/docker-services.yml
@@ -65,13 +65,14 @@ services:
     ports:
       - "15672:15672"
       - "5672:5672"
-  es:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.2.0
+  search:
+    image: opensearchproject/opensearch:1.3.4
     restart: "unless-stopped"
     environment:
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
       - discovery.type=single-node
+      - plugins.security.disabled=true  # NOTE: this shouldn't be used in production!
     healthcheck:
       test: ["CMD", "curl", "-f", "localhost:9200/_cluster/health?wait_for_status=green"]
       interval: 30s
@@ -85,13 +86,15 @@ services:
     ports:
       - "9200:9200"
       - "9300:9300"
-  kibana:
-    image: docker.elastic.co/kibana/kibana-oss:7.2.0
-    environment:
-      - "ELASTICSEARCH_HOSTS=http://es:9200"
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+  opensearch-dashboards:
+    image: opensearchproject/opensearch-dashboards:1.3.4
+    container_name: opensearch-dashboards
     ports:
       - "5601:5601"
+    expose:
+      - "5601"
+    environment:
+      - "OPENSEARCH_HOSTS=http://search:9200"
   flower:
     image: mher/flower
     command: --broker=amqp://guest:guest@mq:5672/ --broker_api=http://guest:guest@mq:15672/api/
