--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -194,6 +194,9 @@ from invenio_records_resources.services.records.facets import CFTermsFacet
 from invenio_rdm_records.config import RDM_FACETS, RDM_SEARCH
 from invenio_rdm_records.services.schemas.metadata import _valid_url
 from invenio_vocabularies.services.custom_fields import VocabularyCF
+from marshmallow_utils.fields.edtfdatestring import EDTFValidator
+from marshmallow import ValidationError
+from invenio_vocabularies.services.facets import VocabularyLabels
 
 #
 # Namespaces
@@ -206,6 +209,13 @@ RDM_NAMESPACES = {
 #
 # Records custom fields
 #
+
+def _validate_release_year(value):
+    """Accept only edtf year values i.e YYYY."""
+    _validate = EDTFValidator()
+    _value = _validate(value)
+    if not _value.isdigit():
+        raise ValidationError("Please provide a valid year.", field_name="release_year")
 
 RDM_CUSTOM_FIELDS = [
     TextCF(
@@ -224,7 +234,10 @@ RDM_CUSTOM_FIELDS = [
         dump_options=True,
         multiple=True
     ),
-    EDTFDateStringCF(name="rdm:release_year"),
+    EDTFDateStringCF(
+        name="rdm:release_year",
+        field_args={"validate": _validate_release_year}
+    ),
     ISODateStringCF(name="rdm:release_date"),
     TextCF(name="rdm:release_notes"),
 ]
@@ -261,7 +274,7 @@ RDM_CUSTOM_FIELDS_UI = [
                 ui_widget="AutocompleteDropdown",  # predefined widget
                 props=dict(
                     label="Programming Languages",
-                    placeholder="Type an author name...",
+                    placeholder="Type a programming language...",
                     icon="language",
                     description="List of programming fields used in this project.",
                     autocompleteFrom="/api/vocabularies/programminglanguages",
@@ -276,7 +289,7 @@ RDM_CUSTOM_FIELDS_UI = [
                     label="Release Year",
                     placeholder="Release year (EDTF date of format YYYY).",
                     icon="calendar",
-                    description="Format: DATE or DATE/DATE where DATE is YYYY or YYYY-MM or YYYY-MM-DD.",
+                    description="Format: DATE where DATE is YYYY.",
                 )
             ),
             dict(
@@ -309,6 +322,7 @@ RDM_FACETS = {
         "facet": CFTermsFacet(
             field="rdm:development_status.id",
             label=_("Development Status"),
+            value_labels=VocabularyLabels("developmentstatus")
         ),
         "ui": {
             "field": CFTermsFacet.field("rdm:development_status.id"),
@@ -334,8 +348,6 @@ RDM_SEARCH = {
 #
 # Communities custom fields
 #
-
-COMMUNITIES_NAMESPACES = RDM_NAMESPACES
 
 COMMUNITIES_CUSTOM_FIELDS = [
     TextCF(
