config: fix custom fields facets

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -194,9 +194,9 @@ from invenio_records_resources.services.records.facets import CFTermsFacet
 from invenio_rdm_records.config import RDM_FACETS, RDM_SEARCH
 from invenio_rdm_records.services.schemas.metadata import _valid_url
 from invenio_vocabularies.services.custom_fields import VocabularyCF
+from invenio_vocabularies.services.facets import VocabularyLabels
 from marshmallow_utils.fields.edtfdatestring import EDTFValidator
 from marshmallow import ValidationError
-from invenio_vocabularies.services.facets import VocabularyLabels
 
 #
 # Namespaces
@@ -322,19 +322,20 @@ RDM_FACETS = {
         "facet": CFTermsFacet(
             field="rdm:development_status.id",
             label=_("Development Status"),
-            value_labels=VocabularyLabels("developmentstatus")
+            value_labels=VocabularyLabels("developmentstatus"),
         ),
         "ui": {
-            "field": CFTermsFacet.field("rdm:development_status.id"),
+            "field": CFTermsFacet.field("rdm:development_status"),
         },
     },
     "programming_language": {
         "facet": CFTermsFacet(
             field="rdm:programming_languages.id",
-            label=_("Development Status"),
+            label=_("Programming Languages"),
+            value_labels=VocabularyLabels("programminglanguages"),
         ),
         "ui": {
-            "field": CFTermsFacet.field("rdm:programming_languages.id"),
+            "field": CFTermsFacet.field("rdm:programming_languages"),
         },
     },
 }
