actions: allow manual trigger of latest image

--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -9,6 +9,12 @@ on:
     # Publish `v1.2.3` tags as releases.
     tags:
       - v*
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: "Reason"
+        required: false
+        default: "Manual trigger"
 
 env:
   IMAGE_NAME: demo-inveniordm
