custom-fields: add number and boolean widgets

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -185,7 +185,10 @@ SEARCH_INDEX_PREFIX = "demo-inveniordm-"
 from flask_babelex import lazy_gettext as _
 from invenio_records_resources.services.custom_fields import (
     BaseCF,
+    BooleanCF,
+    DoubleCF,
     EDTFDateStringCF,
+    IntegerCF,
     ISODateStringCF,
     KeywordCF,
     TextCF,
@@ -240,6 +243,9 @@ RDM_CUSTOM_FIELDS = [
     ),
     ISODateStringCF(name="rdm:release_date"),
     TextCF(name="rdm:release_notes"),
+    IntegerCF(name="rdm:release_number_of_lines"),
+    DoubleCF(name="rdm:release_test_percentage"),
+    BooleanCF(name="rdm:lts_release")
 ]
 
 RDM_CUSTOM_FIELDS_UI = [
@@ -312,6 +318,37 @@ RDM_CUSTOM_FIELDS_UI = [
                     description="Changes made in the release.",
                 )
             ),
+             dict(
+                field="rdm:release_number_of_lines",
+                ui_widget="NumberInput",
+                props=dict(
+                    label="Release number of lines",
+                    placeholder="Number of lines in code.",
+                    icon="calculator",
+                    description="Insert the integer number of code lines changed in this release.",
+                )
+            ),
+            dict(
+                field="rdm:release_test_percentage",
+                ui_widget="NumberInput",
+                props=dict(
+                    label="Release test coverage (%)",
+                    placeholder="Release test coverage (e.g 95,75).",
+                    icon="calculator",
+                    description="Format: double number.",
+                )
+            ),
+            dict(
+                field="rdm:lts_release",
+                ui_widget="BooleanInput",
+                props=dict(
+                    label="LTS release",
+                    trueLabel="Yes",
+                    falseLabel="No",
+                    icon="tag",
+                    description="Mark if this is a Long Term Support release (LTS).",
+                )
+            )
         ]
     }
 ]
