rename BooleanInput cmp

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -340,7 +340,7 @@ RDM_CUSTOM_FIELDS_UI = [
             ),
             dict(
                 field="rdm:lts_release",
-                ui_widget="BooleanInput",
+                ui_widget="BooleanCheckbox",
                 props=dict(
                     label="LTS release",
                     trueLabel="Yes",
