--- a/demo-inveniordm/docker-compose.yml
+++ b/demo-inveniordm/docker-compose.yml
@@ -2,7 +2,7 @@
 #
 # This file is part of Invenio.
 #
-# Copyright (C) 2019 CERN.
+# Copyright (C) 2019-2022 CERN.
 # Copyright (C) 2019 Northwestern University.
 #
 # Invenio is free software; you can redistribute it and/or modify it
@@ -39,3 +39,11 @@ services:
     extends:
       file: docker-services.yml
       service: search
+  opensearch-dashboards:
+    extends:
+      file: docker-services.yml
+      service: opensearch-dashboards
+  pgadmin:
+    extends:
+      file: docker-services.yml
+      service: pgadmin
