--- a/demo-inveniordm/docker-services.yml
+++ b/demo-inveniordm/docker-services.yml
@@ -2,7 +2,7 @@
 #
 # This file is part of Invenio.
 #
-# Copyright (C) 2019 CERN.
+# Copyright (C) 2019-2022 CERN.
 # Copyright (C) 2019 Northwestern University.
 #
 # Invenio is free software; you can redistribute it and/or modify it
@@ -24,7 +24,7 @@ services:
       - "INVENIO_CACHE_TYPE=redis"
       - "INVENIO_CELERY_BROKER_URL=amqp://guest:guest@mq:5672/"
       - "INVENIO_CELERY_RESULT_BACKEND=redis://cache:6379/2"
-      - "INVENIO_SEARCH_ELASTIC_HOSTS=['es:9200']"
+      - "INVENIO_SEARCH_HOSTS=['search:9200']"
       - "INVENIO_SECRET_KEY=CHANGE_ME"
       - "INVENIO_SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://demo-inveniordm:demo-inveniordm@db/demo-inveniordm"
       - "INVENIO_WSGI_PROXIES=2"
@@ -59,6 +59,17 @@ services:
       - "POSTGRES_DB=demo-inveniordm"
     ports:
       - "5432:5432"
+  pgadmin:
+    image: dpage/pgadmin4:5.2
+    restart: "unless-stopped"
+    ports:
+      - "5050:80"
+      - "5051:443"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "info@inveniosoftware.org"
+      PGADMIN_DEFAULT_PASSWORD: "demo-inveniordm"
+    volumes:
+      - ./docker/pgadmin/servers.json:/pgadmin4/servers.json
   mq:
     image: rabbitmq:3-management
     restart: "unless-stopped"
@@ -66,7 +77,7 @@ services:
       - "15672:15672"
       - "5672:5672"
   search:
-    image: opensearchproject/opensearch:1.3.4
+    image: opensearchproject/opensearch:2.3.0
     restart: "unless-stopped"
     environment:
       - bootstrap.memory_lock=true
@@ -87,7 +98,7 @@ services:
       - "9200:9200"
       - "9300:9300"
   opensearch-dashboards:
-    image: opensearchproject/opensearch-dashboards:1.3.4
+    image: opensearchproject/opensearch-dashboards:2.3.0
     container_name: opensearch-dashboards
     ports:
       - "5601:5601"
