--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -129,7 +129,7 @@ SITE_API_URL = "https://127.0.0.1:5000/api"
 DATACITE_ENABLED = True
 DATACITE_USERNAME = ""
 DATACITE_PASSWORD = ""
-DATACITE_PREFIX = ""
+DATACITE_PREFIX = "10.1234"
 DATACITE_TEST_MODE = True
 
 # Invenio-OAuthclient
