openseach: disable security plugin

--- a/demo-inveniordm/docker-services.yml
+++ b/demo-inveniordm/docker-services.yml
@@ -9,7 +9,7 @@
 # under the terms of the MIT License; see LICENSE file for more details.
 #
 
-version: '2.2'
+version: "2.2"
 services:
   app:
     build:
@@ -83,9 +83,17 @@ services:
       - bootstrap.memory_lock=true
       - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
       - discovery.type=single-node
-      - plugins.security.disabled=true  # NOTE: this shouldn't be used in production!
+      - plugins.security.disabled=true # NOTE: this shouldn't be used in production!
+      - "DISABLE_SECURITY_PLUGIN=true"
+      - "DISABLE_INSTALL_DEMO_CONFIG=true"
     healthcheck:
-      test: ["CMD", "curl", "-f", "localhost:9200/_cluster/health?wait_for_status=green"]
+      test:
+        [
+          "CMD",
+          "curl",
+          "-f",
+          "localhost:9200/_cluster/health?wait_for_status=green",
+        ]
       interval: 30s
       timeout: 30s
       retries: 5
@@ -99,13 +107,13 @@ services:
       - "9300:9300"
   opensearch-dashboards:
     image: opensearchproject/opensearch-dashboards:2.3.0
-    container_name: opensearch-dashboards
     ports:
       - "5601:5601"
     expose:
       - "5601"
     environment:
       - "OPENSEARCH_HOSTS=http://search:9200"
+      - "DISABLE_SECURITY_DASHBOARDS_PLUGIN=true"
   flower:
     image: mher/flower
     command: --broker=amqp://guest:guest@mq:5672/ --broker_api=http://guest:guest@mq:15672/api/
