ci: fix latest tag docker image

--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -37,8 +37,8 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME }}
           tags: |
             type=semver,pattern={{version}}
-          flavor: |
-            latest=true
+            # set latest tag for default branch (master)
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
