--- a/demo-inveniordm/Dockerfile
+++ b/demo-inveniordm/Dockerfile
@@ -11,19 +11,19 @@
 # Dockerfile that builds a fully functional image of your app.
 #
 # This image installs all Python dependencies for your application. It's based
-# on CentOS 7 with Python 3 (https://github.com/inveniosoftware/docker-invenio)
+# on Almalinux (https://github.com/inveniosoftware/docker-invenio)
 # and includes Pip, Pipenv, Node.js, NPM and some few standard libraries
 # Invenio usually needs.
 #
 # Note: It is important to keep the commands in this file in sync with your
 # bootstrap script located in ./scripts/bootstrap.
 
-FROM inveniosoftware/centos8-python:3.8
+FROM registry.cern.ch/inveniosoftware/almalinux:1
 
 ARG include_assets
 
 COPY Pipfile Pipfile.lock ./
-RUN pipenv install --deploy --system --pre
+RUN pipenv install --deploy --system
 
 COPY ./docker/uwsgi/ ${INVENIO_INSTANCE_PATH}
 COPY ./invenio.cfg ${INVENIO_INSTANCE_PATH}
@@ -35,9 +35,7 @@ RUN if [ "$include_assets" = "true" ]; \
         cp -r ./static/. ${INVENIO_INSTANCE_PATH}/static/ && \
         cp -r ./assets/. ${INVENIO_INSTANCE_PATH}/assets/ && \
         invenio collect --verbose  && \
-        invenio webpack create && \
-        invenio webpack install --unsafe && \
-        invenio webpack build \
+        invenio webpack buildall \
     ; fi
 
 ENTRYPOINT [ "bash", "-c"]
