--- a/demo-inveniordm/Pipfile
+++ b/demo-inveniordm/Pipfile
@@ -7,14 +7,14 @@ verify_ssl = true
 check-manifest = ">=0.25"
 
 [packages]
-invenio-app-rdm = {extras = ["opensearch2"], version = "~=10.0.0"}
+invenio-app-rdm = {extras = ["opensearch2"], version = "~=11.0.0.dev5"}
 invenio-logging = {extras = ["sentry-sdk"], version = "~=1.3.0"}
 uwsgi = ">=2.0"
 uwsgitop = ">=0.11"
 uwsgi-tools = ">=1.1.1"
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
 
 [pipenv]
 allow_prereleases = false
