--- a/demo-inveniordm/docker-services.yml
+++ b/demo-inveniordm/docker-services.yml
@@ -37,13 +37,13 @@ services:
       - "80"
       - "443"
   cache:
-    image: redis:7
+    image: registry.cern.ch/docker.io/library/redis:7
     restart: "unless-stopped"
     read_only: true
     ports:
       - "6379:6379"
   db:
-    image: postgres:9.6
+    image: registry.cern.ch/docker.io/library/postgres:9.6
     restart: "unless-stopped"
     environment:
       - "POSTGRES_USER=demo-inveniordm"
@@ -52,7 +52,7 @@ services:
     ports:
       - "5432:5432"
   pgadmin:
-    image: dpage/pgadmin4:5.2
+    image: registry.cern.ch/docker.io/dpage/pgadmin4:5.2
     restart: "unless-stopped"
     ports:
       - "5050:80"
@@ -63,13 +63,13 @@ services:
     volumes:
       - ./docker/pgadmin/servers.json:/pgadmin4/servers.json
   mq:
-    image: rabbitmq:3-management
+    image: registry.cern.ch/docker.io/library/rabbitmq:3-management
     restart: "unless-stopped"
     ports:
       - "15672:15672"
       - "5672:5672"
   search:
-    image: opensearchproject/opensearch:2.3.0
+    image: registry.cern.ch/docker.io/opensearchproject/opensearch:2.3.0
     restart: "unless-stopped"
     environment:
       # settings only for development. DO NOT use in production!
@@ -101,7 +101,7 @@ services:
       - "9200:9200"
       - "9600:9600"
   opensearch-dashboards:
-    image: opensearchproject/opensearch-dashboards:2.3.0
+    image: registry.cern.ch/docker.io/opensearchproject/opensearch-dashboards:2.3.0
     ports:
       - "5601:5601"
     expose:
