config: remove deprecated flask_babelex

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -179,7 +179,7 @@ SEARCH_INDEX_PREFIX = "demo-inveniordm-"
 # Custom Fields
 # =============
 
-from flask_babelex import lazy_gettext as _
+from invenio_i18n import lazy_gettext as _
 from invenio_records_resources.services.custom_fields import (
     BaseCF,
     BooleanCF,
