enable matomo tracking code

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -94,6 +94,9 @@ THEME_FRONTPAGE_TITLE = "Welcome to InvenioRDM's Sandbox!"
 THEME_FRONTPAGE_TEMPLATE = 'demo_inveniordm/demo_frontpage.html'
 # Header logo
 THEME_LOGO="images/invenio-rdm.svg"
+# Site tracking code template for matomo analytics
+# Enable the below on the dedicated environment
+# THEME_TRACKINGCODE_TEMPLATE = "demo_inveniordm/trackingcode-prod.html"
 
 
 # Invenio-App-RDM
