config: add communities cache config

--- a/demo-inveniordm/docker-services.yml
+++ b/demo-inveniordm/docker-services.yml
@@ -26,6 +26,7 @@ services:
       - "INVENIO_CELERY_RESULT_BACKEND=redis://cache:6379/2"
       - "INVENIO_SEARCH_HOSTS=['search:9200']"
       - "INVENIO_SECRET_KEY=CHANGE_ME"
+      - "INVENIO_COMMUNITIES_IDENTITIES_CACHE_REDIS_URL=redis://cache:6379/4"
       - "INVENIO_SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://demo-inveniordm:demo-inveniordm@db/demo-inveniordm"
       - "INVENIO_WSGI_PROXIES=2"
       - "INVENIO_RATELIMIT_STORAGE_URL=redis://cache:6379/3"
