--- a/demo-inveniordm/Pipfile
+++ b/demo-inveniordm/Pipfile
@@ -7,14 +7,11 @@ verify_ssl = true
 check-manifest = ">=0.25"
 
 [packages]
-invenio-app-rdm = {extras = ["opensearch2"], version = "~=12.0.0b1"}
-invenio-logging = {extras = ["sentry-sdk"], version = "~=1.3.0"}
+invenio-app-rdm = {extras = ["opensearch2"], version = "~=12.0.0b3.dev12"}
+invenio-logging = {extras = ["sentry_sdk"], version = "~=2.0"}
 uwsgi = ">=2.0"
 uwsgitop = ">=0.11"
 uwsgi-tools = ">=1.1.1"
 
 [requires]
 python_version = "3.9"
-
-[pipenv]
-allow_prereleases = false
