--- a/demo-inveniordm/Pipfile
+++ b/demo-inveniordm/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 check-manifest = ">=0.25"
 
 [packages]
-invenio-app-rdm = {extras = ["opensearch2"], version = "~=12.0.0b3.dev12"}
+invenio-app-rdm = {extras = ["opensearch2"], version = "~=12.0.0rc2"}
 invenio-logging = {extras = ["sentry_sdk"], version = "~=2.0"}
 uwsgi = ">=2.0"
 uwsgitop = ">=0.11"
