login: disable CERN integration

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -155,7 +155,7 @@ _orcid_sandbox_app = ORCIDOAuthSettingsHelper(
 )
 
 OAUTHCLIENT_REMOTE_APPS = {
-    "cern": _keycloak_helper.remote_app,
+#    "cern": _keycloak_helper.remote_app,  # CERN login disabled
     "orcid": _orcid_sandbox_app.remote_app,
 }
 
