--- a/demo-inveniordm/Pipfile
+++ b/demo-inveniordm/Pipfile
@@ -7,8 +7,8 @@ verify_ssl = true
 check-manifest = ">=0.25"
 
 [packages]
-invenio-app-rdm = {extras = ["opensearch2"], version = "~=12.0.0"}
-invenio-logging = {extras = ["sentry_sdk"], version = "~=2.0"}
+invenio-app-rdm = {extras = ["opensearch2"], version = "~=13.0.0rc1"}
+sentry-sdk = ">=1.45,<2.0.0"
 uwsgi = ">=2.0"
 uwsgitop = ">=0.11"
 uwsgi-tools = ">=1.1.1"
