enable admin/feature flags

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -383,6 +383,7 @@ RDM_SEARCH = {
 }
 
 
+COMMUNITIES_ADMINISTRATION_DISABLED = False
 #
 # Communities custom fields
 #
@@ -423,3 +424,11 @@ COMMUNITIES_CUSTOM_FIELDS_UI = [
         ]
     }
 ]
+
+# JOBS
+
+INVENIO_JOBS_ADMINISTRATION_ENABLED=True
+
+# AUDIT LOGS
+
+INVENIO_AUDIT_LOGS_ENABLED = True
